# burneural-network

./: .gitignore  2  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/api/neural_network/: batch.rs  config.rs  cuda.rs  mod.rs  ndarray.rs
src/commands/: mod.rs  predict.rs  start.rs  train.rs
