# Adds recommended packages below
[package]
name = "burneural_network"
version = "0.2.0"
description = "A neural network written with Burn"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bon = { version = "3.8.1" }
color-eyre = "0.6.3"
thiserror = "2.0.11"
image = { version = "0.25.9" }
serde = { version = "1.0.228", features = [] }
serde_json = { version = "1.0.145" }
toml = { version = "0.9.8", features = ["serde"] }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]

[dependencies.burn]
version = "0.19.1"
features = ["std", "tui", "train", "cuda", "ndarray", "vision", "fusion"]
